crates/torrentctl/src/screens/snapshots/torrentctl__screens__profiles__tests__profiles_80x24.snap
---
source: crates/torrentctl/src/screens/profiles.rs
expression: screen
---
╭ profiles (4) ────────────────────────────────────────────────────────────────╮
│    profile          status     torrents tunnel          listen forward       │
│    acct_a           ● active        900 10.2.0.2             — natpmp :51413 │
│▶ ! acct_b           ✖ vpn_down      334 10.3.0.2         51414 static        │
│    host             ● active          1 host              6881 static        │
│  ! acct_c           ✖ failed         12 —                    — natpmp —      │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ acct_b ──────────────────────────────────────────────────────────────────────╮
│✖ FENCED — restart the daemon to resume                                       │
│Its tunnel failed after it came up, so the VPN monitor paused its torrents. It│
│stays fenced until the daemon restarts; nothing lifts it before then.         │
│                                                                              │
│         status  ✖ vpn_down                                                   │
│       torrents  334                                                          │
│      tunnel ip  10.3.0.2                                                     │
│  vpn interface  wg-b                                                         │
│    listen port  51414                                                        │
│   port forward  static                                                       │
│ forward health  ● ok                                                         │
│ paused for vpn  334                                                          │
│     user agent  default                                                      │
│       trackers  tracker.example.org                                          │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
