crates/torrentctl/src/screens/snapshots/torrentctl__screens__profiles__tests__profiles_acct_c_160x48.snap
---
source: crates/torrentctl/src/screens/profiles.rs
expression: screen
---
╭ profiles (4) ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│    profile              status     torrents tunnel          listen forward        user agent                                                                 │
│    acct_a               ● active        900 10.2.0.2             — natpmp :51413  qBittorrent/4.6.2                                                          │
│  ! acct_b               ✖ vpn_down      334 10.3.0.2         51414 static         default                                                                    │
│    host                 ‖ offline         1 host              6881 static         default                                                                    │
│▶ ! acct_c               ✖ failed         12 —                    — natpmp —       default                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ acct_c ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│✖ NEVER CAME UP — wg-c did not come up within 30s                                                                                                             │
│Its session was never built at boot: its 12 torrents are stranded, not loaded. Fix the cause and restart the daemon.                                          │
│                                                                                                                                                              │
│         status  ✖ failed                       allowed trackers                                                                                              │
│         set to  online                         any (no allow-list)                                                                                           │
│       torrents  12                                                                                                                                           │
│      tunnel ip  —                              actions                                                                                                       │
│  vpn interface  wg-c                           p     take offline                                                                                            │
│    listen port  —                              r     bring online                                                                                            │
│   port forward  natpmp —                       Enter show its torrents                                                                                       │
│ forward health  ✖ not ok                                                                                                                                     │
│ paused for vpn  0                                                                                                                                            │
│     user agent  default                                                                                                                                      │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
