crates/torrentctl/src/screens/snapshots/torrentctl__screens__profiles__tests__profiles_confirm_offline_80x24.snap
---
source: crates/torrentctl/src/screens/profiles.rs
expression: screen
---
╭ profiles (4) ────────────────────────────────────────────────────────────────╮
│    profile          status     torrents tunnel          listen forward       │
│▶   acct_a           ● active        900 10.2.0.2             — natpmp :51413 │
│  ! acct_b           ✖ vpn_down      334 10.3.0.2         51414 static        │
│    host             ‖ offline         1 host              6881 static        │
│  ! acct_c           ✖ failed         12 —                    — natpmp —      │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ acct_a ──────────────────────────────────────────────────────────────────────╮
│● activ╭ Take offline — acct_a ───────────────────────────────────────╮       │
│       │Take profile acct_a offline? None of its 900 torrents will    │       │
│       │announce or connect to peers, and adds into it are refused,   │       │
│       │until it is brought online. Kept across restarts.             │       │
│       │                                                              │       │
│      t│y yes  n/Esc no                                               │       │
│  vpn i│                                                              │       │
│    lis╰──────────────────────────────────────────────────────────────╯       │
│   port forward  natpmp :51413                                                │
│ forward health  ● ok                                                         │
│ paused for vpn  0                                                            │
│     user agent  qBittorrent/4.6.2                                            │
│       trackers  tracker.example.org, announce.example.net                    │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
