crates/torrentctl/src/screens/snapshots/torrentctl__screens__profiles__tests__profiles_host_160x48.snap
---
source: crates/torrentctl/src/screens/profiles.rs
expression: screen
---
╭ profiles (4) ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│    profile              status     torrents tunnel          listen forward        user agent                                                                 │
│    acct_a               ● active        900 10.2.0.2             — natpmp :51413  qBittorrent/4.6.2                                                          │
│  ! acct_b               ✖ vpn_down      334 10.3.0.2         51414 static         default                                                                    │
│▶   host                 ‖ offline         1 host              6881 static         default                                                                    │
│  ! acct_c               ✖ failed         12 —                    — natpmp —       default                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ host ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│‖ OFFLINE — r brings it online                                                                                                                                │
│Set offline: its session is paused, so none of its torrents announces or connects to peers, and adds into it are refused. Kept across restarts.               │
│                                                                                                                                                              │
│         status  ● active                       allowed trackers                                                                                              │
│         set to  offline                        any (no allow-list)                                                                                           │
│       torrents  1                                                                                                                                            │
│      tunnel ip  host                           actions                                                                                                       │
│  vpn interface  none (host)                    p     take offline                                                                                            │
│    listen port  6881                           r     bring online                                                                                            │
│   port forward  static                         Enter show its torrents                                                                                       │
│ forward health  ● ok                                                                                                                                         │
│ paused for vpn  0                                                                                                                                            │
│     user agent  default                                                                                                                                      │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
